--- a/index.html
+++ b/index.html
@@ -7,9 +7,57 @@
 .img{
   max-height: 500px;
 }
+.note {
+  font-style: italic;
+  margin-bottom: 20px;
+}
 </style>
 <body>
-<h1>Квартира</h1>
-    <a href="./images/1.jpg"><img src="./images/1.jpg" alt="картинка" class="img"/></a>
+<h1>Однокомнатная квартира</h1>
+<p>г. Всеволожск, ул. Знаменская, д.1/8, 6 этаж</p>
+<hr>
+<p>Общая площадь: 36.8</p>
+<p>Жилая площадь: 14.5</p>
+<p>Лоджия: 1.8</p>
+<a href="./images/1.jpg"><img src="./images/1.jpg" alt="картинка" class="img"/></a>
+<div class="note">Планировка</div>
+<a href="./images/2.jpg"><img src="./images/2.jpg" alt="картинка" class="img"/></a>
+<div class="note">Жилая комната</div>
+<a href="./images/3.jpg"><img src="./images/3.jpg" alt="картинка" class="img"/></a>
+<div class="note">Жилая комната</div>
+<a href="./images/4.jpg"><img src="./images/4.jpg" alt="картинка" class="img"/></a>
+<div class="note">Жилая комната</div>
+<a href="./images/5.jpg"><img src="./images/5.jpg" alt="картинка" class="img"/></a>
+<div class="note">Жилая комната</div>
+<a href="./images/6.jpg"><img src="./images/6.jpg" alt="картинка" class="img"/></a>
+<div class="note">Прихожая</div>
+<a href="./images/7.jpg"><img src="./images/7.jpg" alt="картинка" class="img"/></a>
+<div class="note">Прихожая, входная дверь</div>
+<a href="./images/8.jpg"><img src="./images/8.jpg" alt="картинка" class="img"/></a>
+<div class="note">Прихожая</div>
+<a href="./images/9.jpg"><img src="./images/9.jpg" alt="картинка" class="img"/></a>
+<div class="note">Прихожая</div>
+<a href="./images/10.jpg"><img src="./images/10.jpg" alt="картинка" class="img"/></a>
+<div class="note">Прихожая</div>
+<a href="./images/11.jpg"><img src="./images/11.jpg" alt="картинка" class="img"/></a>
+<div class="note">Кухня</div>
+<a href="./images/12.jpg"><img src="./images/12.jpg" alt="картинка" class="img"/></a>
+<div class="note">Кухня</div>
+<a href="./images/13.jpg"><img src="./images/13.jpg" alt="картинка" class="img"/></a>
+<div class="note">Кухня</div>
+<a href="./images/14.jpg"><img src="./images/14.jpg" alt="картинка" class="img"/></a>
+<div class="note">Кухня</div>
+<a href="./images/15.jpg"><img src="./images/15.jpg" alt="картинка" class="img"/></a>
+<div class="note">Лоджия</div>
+<a href="./images/16.jpg"><img src="./images/16.jpg" alt="картинка" class="img"/></a>
+<div class="note">Лоджия</div>
+<a href="./images/17.jpg"><img src="./images/17.jpg" alt="картинка" class="img"/></a>
+<div class="note">Санузел</div>
+<a href="./images/18.jpg"><img src="./images/18.jpg" alt="картинка" class="img"/></a>
+<div class="note">Ванная</div>
+<a href="./images/19.jpg"><img src="./images/19.jpg" alt="картинка" class="img"/></a>
+<div class="note">Ванная</div>
+<a href="./images/20.jpg"><img src="./images/20.jpg" alt="картинка" class="img"/></a>
+<div class="note">Ванная</div>
 </body>
 </html>
